download functionality added

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -40,3 +40,8 @@ html
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-XXXXX-X', 'auto');
       ga('send', 'pageview');
+        style(type='text/css').
+                  .viewimage{
+                    width:900px;
+                    height:100%;
+                  }
