--- a/views/library.pug
+++ b/views/library.pug
@@ -4,6 +4,7 @@ block content
     .ui.grid.container
         .eight.wide.column
 
+        
             .ui.celled.list
                     each file in files
                         .item
@@ -14,12 +15,14 @@ block content
                                     |  #{file.size}  #{file.mimetype}
                                 .ui.action.mini.input
                                     - var url = 'pug-test.html #{file}'
-                                                a.link(href=`http://localhost:8080/f/`+file.id)
+                                                a.link(href=`http://localhost:8080/f/`+file.filename)
                                                         |   Download&nbsp;&nbsp;
-                                                a.link(href=`http://localhost:8080/v/`+file.id)
+                                                a.link(href=`http://localhost:8080/v/`+file.filename)
                                                         |   View
                                                 a.link(href=`http://localhost:8080/s/`+file.id)
                                                         | Share
+                                               
+            
         .eight.wide.column
             form.ui.form(action="http://localhost:8080/library" method='POST' enctype="multipart/form-data")
                 .ui.mini.input
