--- a/views/library.pug
+++ b/views/library.pug
@@ -4,13 +4,13 @@ block content
     .ui.grid.container
         .eight.wide.column
 
-        
+
             .ui.celled.list
                     each file in files
                         .item
                                 .header
                                     a(href="/")
-                                        | #{file.originalname} #{file.id}
+                                        | #{file.originalname} 
                                 .content
                                     |  #{file.size}  #{file.mimetype}
                                 .ui.action.mini.input
@@ -21,8 +21,8 @@ block content
                                                         |   View
                                                 a.link(href=`http://localhost:8080/s/`+file.id)
                                                         | Share
-                                               
-            
+
+
         .eight.wide.column
             form.ui.form(action="http://localhost:8080/library" method='POST' enctype="multipart/form-data")
                 .ui.mini.input
