--- a/views/flat.pug
+++ b/views/flat.pug
@@ -4,6 +4,7 @@ block content
     link(href="../../static/stylesheets/default.css" rel="stylesheet" type="text/css")
     link(href="../../static/stylesheets/pandoc-code-highlight.css" rel="stylesheet" type="text/css")
     script(src="../../static/dist/jquery/jquery.min.js")
+    link(rel='stylesheet', href='https://bootswatch.com/4/minty/bootstrap.min.css')
     link(href="/css/flat.css", rel='stylesheet')
     title DevLoad
     .ui.vertical.primary.sidebar.menu
@@ -20,17 +21,17 @@ block content
             a.active.item Home
             //- a.item Plans
             .right.item
-              a.ui.secondary.button(href='/login') Log in
-              a.ui.secondary.button(href='/signup') Sign Up
-        .ui.text.container
-            h1.ui.header
-              | dev.upload
-            h2.texti
+              a.btn.mr-1.btn-info(href='/login') Log in
+              a.btn.btn-info(href='/signup') Sign Up
+        .ui.text.container.mt-9
+            h1.display-1.jumbotron
+              | candyfiles
+            h1.lead
               | upload single files and get them when you need them.
-            a.ui.huge.secondary.button(href='/signup')
-              | Get Started
+            a.btn.btn-secondary(href='/signup')
+              | Start uploading
               i.right.arrow.icon
-    
+
 
     .ui.inverted.vertical.footer.segment
             .ui.container
