--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,11 +8,9 @@ html
     meta(name='csrf-token', content=_csrf)
     title #{title} - DevLoad
     link(rel='shortcut icon', href='/favicon.png')
-    link(rel='stylesheet', href='/css/themes/modern/_modern.scss')
-    link(rel='stylesheet', href='/css/semantic.css')
+    link(rel='stylesheet', href='https://bootswatch.com/4/minty/bootstrap.min.css')
     link(rel='stylesheet', href='/css/style.css')
     link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
-    link(rel='stylesheet', href='/css/dropdown.min.css')
     meta(charset="utf-8")
     meta(content="PPType" name="Tyrese Williams")
     meta(content="#ffffff" name="theme-color")
