--- a/views/partials/flash.pug
+++ b/views/partials/flash.pug
@@ -1,29 +1,27 @@
 if messages.errors
- .ui.grid
-    .eight.wide.column
-      .ui.negative.message
-        i.close.icon
-        .header
-            | Error
+  .container
+    .col-md-6
+      .alert.alert-dismissible.alert-danger
+        button.close(type='button', data-dismiss='alert') ×
+        strong Oh snap!
         for error in messages.errors
           p= error.msg
 
 if messages.info
- .ui.grid
-    .eight.wide.column
-      .ui.error.message
-        i.close.icon
-        .header
-            | Info
+  .container
+    .col-md-6
+      .alert.alert-dismissible.alert-light
+        button.close(type='button', data-dismiss='alert') ×
+        strong Info:
+        |
         for info in messages.info
           div= info.msg
 
 if messages.success
-  .ui.grid
-    .eight.wide.column
-      .ui.success.message
-        i.close.icon
-        .header
-          | Success: 
-        for success in messages.success
-          p= success.msg
+  .container
+    .col-md-6
+      .alert.alert-dismissible.alert-success
+        button.close(type='button', data-dismiss='alert') ×
+        strong Success:
+          for success in messages.success
+            p= success.msg
