--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -1,23 +1,22 @@
 extends ../layout
 
 block content
-  .ui.grid.container.center
-    .ui.one.column.stackable.center.aligned.page.grid
-      .column.twelve.wide
-
-        h3 Sign up
-        form.ui.form(id='signup-form', method='POST')
-          input(type='hidden', name='_csrf', value=_csrf)
-          .field
-            label Email
-              input(type='email', name='email', id='email', placeholder='Email', autofocus, autocomplete='email', required)
-          .field
-            label Password
-              input(type='password', name='password', id='password', placeholder='Password', autocomplete='new-password', required)
-          .field
-            label Confirm Password
-              input(type='password', name='confirmPassword', id='confirmPassword', placeholder='Confirm Password', autocomplete='new-password', required)
-          .field
-            button.ui.button(type='submit')
-
-              img(src='/_PNG/basic_paperplane.png')
+      br
+      a(href='/')
+        button.btn-sm.btn.btn-info.mb-2.mt-2 👈 &nbsp;Go Back
+      hr
+      .container.mt-5
+          h4 👋 Register to begin saving and sharing your files!
+          p Enter a few fields and begin the journey
+          form(id='signup-form', method='POST')
+            input(type='hidden', name='_csrf', value=_csrf)
+            .form-group
+              label Email
+                input.form-control(type='email', name='email', placeholder='Email', autofocus, autocomplete='email', required)
+            .form-group
+              label Password
+                input.form-control(type='password', name='password', placeholder='Password', autocomplete='new-password', required)
+            .form-group
+              label Confirm Password
+                input.form-control(type='password', name='confirmPassword', placeholder='Confirm Password', autocomplete='new-password', required)
+          button.btn.btn-info Register
