--- a/views/home.pug
+++ b/views/home.pug
@@ -2,6 +2,9 @@ extends layout
 
 block content
   .container
-
-    h3 👋, Candyfiles #{user.email}
-    p
+    .row.mt-5
+      .col-md-12.mt-2
+          h3.
+           👋 Greetings #{user.email},<br/>
+            Enter your library for the magic
+          p Love
