--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,10 +6,11 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='theme-color' content='#4DA5F4')
     meta(name='csrf-token', content=_csrf)
-    title #{title} - DevLoad
+    title #{title} - Candyfiles
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='https://bootswatch.com/4/minty/bootstrap.min.css')
     link(rel='stylesheet', href='/css/style.css')
+
     link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
     meta(charset="utf-8")
     meta(content="PPType" name="Tyrese Williams")
