--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,5 @@ block content
   .container
     .row.mt-5
       .col-md-12.mt-2
-          h3.
-           👋 Greetings #{user.email},<br/>
-            Enter your library for the magic
-          p Love
+          h2.display-5.text-center.
+           👋 Greetings <u>#{user.email}</u>,<br/>
