--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
   br
   a(href='/')
-    button.btn-sm.btn.btn-info.mb-2.mt-2 👈 &nbsp;Go Back
+    button.btn-sm.btn.btn-secondary.mb-2.mt-2 👈 &nbsp;Go Back
   hr
   .container.mt-5
     .col-md-12.col-xs-7.col-lg-8
@@ -19,5 +19,5 @@ block content
             label Password
             input.form-control(type="password" name="password" id='password' placeholder="Password")
             br
-          button.btn.btn-info(type="submit") Submit
+          button.btn.btn-secondary(type="submit") Submit
           a.btn.btn-link(href='/forgot') Forgot your password?
