--- a/views/flat.pug
+++ b/views/flat.pug
@@ -7,6 +7,10 @@ block content
     link(rel='stylesheet', href='https://bootswatch.com/4/minty/bootstrap.min.css')
     link(href="/css/flat.css", rel='stylesheet')
     title Candyfiles
+    style(type='text/css').
+      html {
+        background-color:#fab1a0;
+      }
     .ui.vertical.primary.sidebar.menu
       a.active.item Home
         //-   a.item Plans
