--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
       br
       a(href='/')
-        button.btn-sm.btn.btn-info.mb-2.mt-2 👈 &nbsp;Go Back
+        button.btn-sm.btn.btn-secondary.mb-2.mt-2 👈 &nbsp;Go Back
       hr
       .container.mt-5
           h4 👋 Register to begin saving and sharing your files!
@@ -19,4 +19,4 @@ block content
             .form-group
               label Confirm Password
                 input.form-control(type='password', name='confirmPassword', placeholder='Confirm Password', autocomplete='new-password', required)
-          button.btn.btn-info Register
+          button.btn.btn-secondary Register
