fixed register button

--- a/views/flat.pug
+++ b/views/flat.pug
@@ -28,11 +28,13 @@ block content
               a.btn.btn-secondary(href='/signup') Sign Up
         .ui.text.container.mt-3
             h1.display-1
-              | candyfiles
+              | Candyfiles
             h1.lead
-              | upload single files and get them when you need them.
+              | Welcome to Candyfiles.
+              br
+              | We are a file hosting application to help you store your files.
             a.btn.btn-secondary(href='/signup')
-              | Start uploading
+              | Register now
               i.right.arrow.icon
 
 
