--- a/views/home.pug
+++ b/views/home.pug
@@ -6,3 +6,4 @@ block content
       .col-md-12.mt-2
           h2.display-5.text-center.
            👋 Greetings <u>#{user.email}</u>,<br/>
+            Welcome to your Home page
