--- a/views/library.pug
+++ b/views/library.pug
@@ -5,7 +5,7 @@ block content
     .row.mt-5
       .col-md-6
         h5 Start uploading whenever
-        form(action="http://localhost:8080/library" method='POST' enctype="multipart/form-data")
+        form(action=`${process.env.SITEURL}/library` method='POST' enctype="multipart/form-data")
           .form-group
             input.form-control(type="file" name="file")
             input(type='hidden', name='_csrf', value=_csrf)
