--- a/views/flat.pug
+++ b/views/flat.pug
@@ -44,7 +44,7 @@ block content
             a.btn.btn-secondary(href='/signup')
               | Register now
               i.right.arrow.icon
-section.pricing.py-5.bg-secondary.slideInLeft.animated
+section.pricing.py-5.bg-secondary.slideInLeft.animated.center.align-content-md-center
     .container
       .row
         // Free Tier
@@ -53,7 +53,7 @@ section.pricing.py-5.bg-secondary.slideInLeft.animated
             .card-body
               h5.card-title.text-muted.text-uppercase.text-center Free
               h6.card-price.text-center
-                | $0
+                | $5
                 span.period /month
               hr
               ul.fa-ul
@@ -64,220 +64,10 @@ section.pricing.py-5.bg-secondary.slideInLeft.animated
                 li
                   span.fa-li
                     i.fas.fa-check
-                  | 40MB Storage
+                  | 500MB Storage
                 li
                   span.fa-li
                     i.fas.fa-check
-                  | Unlimited Public Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Community Access
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Unlimited Private Projects
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Dedicated Phone Support
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Free Subdomain
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Monthly Status Reports
-              a.btn.btn-block.btn-primary.text-uppercase(href='#') Button
-        // Plus Tier
-        .col-lg-4
-          .card.mb-5.mb-lg-0
-            .card-body
-              h5.card-title.text-muted.text-uppercase.text-center Plus
-              h6.card-price.text-center
-                | $3
-                span.period /month
-              hr
-              ul.fa-ul
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  strong 5 Users
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | 50GB Storage
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Public Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Community Access
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Private Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Dedicated Phone Support
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Free Subdomain
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Monthly Status Reports
-              a.btn.btn-block.btn-primary.text-uppercase(href='#') Button
-        // Pro Tier
-        .col-lg-4
-          .card
-            .card-body
-              h5.card-title.text-muted.text-uppercase.text-center Pro
-              h6.card-price.text-center
-                | $49
-                span.period /month
-              hr
-              ul.fa-ul
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  strong Unlimited Users
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | 150GB Storage
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Public Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Community Access
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Private Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Dedicated Phone Support
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  strong Unlimited
-                  |  Free Subdomains
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Monthly Status Reports
-              a.btn.btn-block.btn-primary.text-uppercase(href='#') Button
-  
-    
-                                        
-            script(src="../../static/dist/semantic-ui/semantic.min.js")
-            style(type="text/css").
-                .hidden.menu {
-                display: none;
-                }
-                .masthead.segment {
-                min-height: 600px;
-                padding: 1em 0em;
-                }
-                .masthead .logo.item img {
-                margin-right: 1em;
-                }
-                .masthead .ui.menu .ui.button {
-                margin-left: 0.5em;
-                }
-                .masthead h1.ui.header {
-                margin-top: 2em;
-                margin-bottom: 0em;
-                font-size: 4em;
-                font-weight: normal;
-                }
-                .masthead h2 {
-                font-size: 1.7em;
-                font-weight: normal;
-                }
-                .ui.vertical.stripe {
-                padding: 8em 0em;
-                }
-                .ui.vertical.stripe h3 {
-                font-size: 2em;
-                }
-                .ui.vertical.stripe .button + h3,
-                .ui.vertical.stripe p + h3 {
-                margin-top: 3em;
-                }
-                .ui.vertical.stripe .floated.image {
-                clear: both;
-                }
-                .ui.vertical.stripe p {
-                font-size: 1.33em;
-                }
-                .ui.vertical.stripe .horizontal.divider {
-                margin: 3em 0em;
-                }
-                .quote.stripe.segment {
-                padding: 0em;
-                }
-                .quote.stripe.segment .grid .column {
-                padding-top: 5em;
-                padding-bottom: 5em;
-                }
-                .footer.segment {
-                padding: 5em 0em;
-                }
-                .secondary.pointing.menu .toc.item {
-                display: none;
-                }
-                @media only screen and (max-width: 700px) {
-                .ui.fixed.menu {
-                display: none !important;
-                }
-                .secondary.pointing.menu .item,
-                .secondary.pointing.menu .menu {
-                display: none;
-                }
-                .secondary.pointing.menu .toc.item {
-                display: block;
-                }
-                .masthead.segment {
-                min-height: 350px;
-                }
-                .masthead h1.ui.header {
-                font-size: 2em;
-                margin-top: 1.5em;
-                }
-                .masthead h2 {
-                margin-top: 0.5em;
-                font-size: 1.5em;
-                }
-                }
-            script.
-                $(document)
-                    .ready(function() {
-                // fix menu when passed
-                $('.masthead')
-                .visibility({
-                once: false,
-                onBottomPassed: function() {
-                $('.fixed.menu').transition('fade in');
-                },
-                onBottomPassedReverse: function() {
-                $('.fixed.menu').transition('fade out');
-                }
-                })
-                ;
-                // create sidebar and attach to menu open
-                $('.ui.sidebar')
-                .sidebar('attach events', '.toc.item')
-                ;
-                })
-                ;
+                  | Unlimited Uploads
+              form(action="/payment/charge" method="POST").m-auto
+                script.stripe-button(src="https://checkout.stripe.com/checkout.js" data-zip-code="true" data-key="pk_test_3VSYWB8HlTqaYUtohpD2d1UX" data-amount="500" data-name="Comingsoon" data-description="Widget" data-image="/images/candy.jpeg" data-locale="auto")
