--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,12 +8,14 @@ html
     meta(name='csrf-token', content=_csrf)
     title #{title} - Candyfiles
     link(rel='shortcut icon', href='/favicon.png')
-    link(rel='stylesheet', href='https://bootswatch.com/4/minty/bootstrap.min.css')
+    //- link(rel='stylesheet', href='https://bootswatch.com/4/minty/bootstrap.min.css')
     link(rel='stylesheet', href='/css/style.css')
 
     link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
+    link(href="/css/bootstrap4-bubblegum.css", rel='stylesheet')
     meta(charset="utf-8")
     meta(content="PPType" name="Tyrese Williams")
+    
     meta(content="#ffffff" name="theme-color")
     if user
       include partials/header
