--- a/views/library.pug
+++ b/views/library.pug
@@ -17,7 +17,10 @@ block content
             .card-header
               h6 #{file.originalname}
             .card-body
-              h4.card-title #{file.size} #{file.mimetype}
+              h4.card-title #{file.mimetype}
+              h6 
+                a.copy_url(href=`${process.env.SITEURL}/v/`+file.shortid, onClick="myFunction()").btn.btn-secondary
+                  | Get URL
               p.card-text
                 a(href=`${process.env.SITEURL}/f/`+file.shortid).btn.btn-secondary
                   | Download&nbsp;&nbsp;
@@ -25,3 +28,10 @@ block content
                   | View
                 a(href=`${process.env.SITEURL}/s/`+file.id).btn.btn-info
                   | Share
+    script.
+        $(document).ready(function() {
+          $("a.copy_url").click(function() {
+            var url = $(this).attr("href");
+            console.log(url);
+          })
+        })
